# calgebra

./: .gitignore  CMakeLists.txt  README.md  README.txt
include/: mfunction.hh  monomial.cc  monomial.hh  operand.hh  operator.hh  parenthesis.hh  parser.hh  scalc.hh  token.hh
src/: mfunction.cc  monomial.cc  operand.cc  operator.cc  parenthesis.cc  parser.cc  token.cc
src/main/: scalc.cc
test/: test_monomial.cc  test_parser.cc  test_popoperand.cc
